mux-compiler/tests/snapshots/executable_integration__executable_integration__parser_class_new_method.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
error: 'new' is reserved for class constructors and cannot be defined as a class method
--> test_scripts/error_cases/parser_class_new_method.mux:4:17
   |
 4 |     common func new() returns void {
   |                 ^^^
